service-nodeport-odoo.yml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
spec:
  type: NodePort
  selector:
    app: app-odoo
  ports:
    - protocol: TCP
      port: 8069
      targetPort: 8069
      nodePort: 30003
