statefulset-odoo.yml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
spec:
  type: ClusterIP
  selector:
    app: app-odoo
  ports:
    - protocol: TCP
      port: 8069
      targetPort: 8069
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: odoo-statefulset
  labels:
    app: app-odoo
spec:
  replicas: 3
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: app-odoo
  template:
    metadata:
      name: odoo-pod
      labels:
        app: app-odoo
    spec:
      containers:
        - name: odoo-container
          image: library/odoo:16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8069
          volumeMounts:
            - name: volume-odoo-addons
              mountPath: "/mnt/extra-addons"
            - name: volume-odoo-web-data
              mountPath: "/var/lib/odoo"
            - name: volume-config
              mountPath: /etc/odoo/odoo.conf
              subPath: odoo.conf
      volumes:
        - name: volume-odoo-addons
          persistentVolumeClaim:
            claimName: pvc-odoo-addons
        - name: volume-odoo-web-data
          persistentVolumeClaim:
            claimName: pvc-odoo-web-data
        - name: volume-config
          configMap:
            name: odoo-config
